<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_addactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wagner.valentin.notificationmaker2.AddActivity"
    tools:showIn="@layout/activity_addactivity">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_vertical|start"
        android:minHeight="?listPreferredItemHeight"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="?listPreferredItemPaddingLeft"
        android:paddingRight="?listPreferredItemPaddingRight"
        android:hint="@string/edit_text_title"
        android:id="@+id/edit_text_title"
        android:layout_marginTop="4dp"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_vertical|start"
        android:minHeight="?listPreferredItemHeight"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="?listPreferredItemPaddingLeft"
        android:paddingRight="?listPreferredItemPaddingRight"
        android:layout_marginTop="6dp"
        android:hint="@string/edit_text_subtitle"
        android:id="@+id/edit_text_subtitle"/>

    <com.wagner.valentin.notificationmaker2.CustomViews.ColorPicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:id="@+id/color_picker_id"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_activity_button"
        android:layout_marginTop="38dp"
        style="@style/StyledButton"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:id="@+id/addactivity_create"/>

</LinearLayout>
